--- a/WebdriverTest/test-output/old/Default suite/methods.html
+++ b/WebdriverTest/test-output/old/Default suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a1eaa2">  <td>19/10/23 13:19:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGPractice.initiation()[pri:0, instance:TestNGPractice@5b87ed94]">&gt;&gt;initiation</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="a1eaa2">  <td>19/10/23 13:19:37</td>   <td>7074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestNGPractice.TestNGTester()[pri:0, instance:TestNGPractice@5b87ed94]">TestNGTester</td> 
-  <td>main@513169028</td>   <td></td> </tr>
-<tr bgcolor="a1eaa2">  <td>19/10/23 13:19:37</td>   <td>7501</td> <td>&nbsp;</td><td title="&lt;&lt;TestNGPractice.end()[pri:0, instance:TestNGPractice@5b87ed94]">&lt;&lt;end</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@513169028</td>   <td></td> </tr>
+<tr bgcolor="a785b4">  <td>20/10/13 23:09:21</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGPractice.initiation()[pri:0, instance:TestNGPractice@10abc94]">&gt;&gt;initiation</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@23744075</td>   <td></td> </tr>
+<tr bgcolor="a785b4">  <td>20/10/13 23:09:26</td>   <td>5210</td> <td>&nbsp;</td><td title="&lt;&lt;TestNGPractice.end()[pri:0, instance:TestNGPractice@10abc94]">&lt;&lt;end</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@23744075</td>   <td></td> </tr>
 </table>
